--- a/views/admin/products-update.html
+++ b/views/admin/products-update.html
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
               <label for="vlweight">URL</label>
-              <input type="text" class="form-control" id="vlweight"  name="desurl" step="0.01" placeholder="0.00" value="{$product.desurl">
+              <input type="text" class="form-control" id="vlweight"  name="desurl" step="0.01" placeholder="0.00" value="{$product.desurl}">
             </div>
            <div class="form-group">
               <label for="file">Foto</label>
